--- a/exercises/01.steps/03.problem.spa/public/index.html
+++ b/exercises/01.steps/03.problem.spa/public/index.html
@@ -16,6 +16,6 @@
 	</head>
 	<body>
 		<div id="root"></div>
-		<script type="module" src="/ui.js"></script>
+		<script type="module" src="/ui/index.js"></script>
 	</body>
 </html>
